lib/prometheus/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics
  namespace: prometheus
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: metrics
