lib/prometheus/50-prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: selfsigning-issuer
    kubernetes.io/ingress.class: nginx
  name: metrics
  namespace: prometheus
spec:
  rules:
  - host: metrics.k8s.dev.neti.systems
    http:
      paths:
      - backend:
          serviceName: metrics
          servicePort: 9090
        path: /
